Домашнее задание в файле index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Рейтинг блюд</title>
 </head>
 <body>
+    <!-- Домашнее задание -->
     <h1>Таблица рейтинга блюд</h1>
     <table bgcolor="#F5F5DC" align="center" border="2px">
         <tr>
